--- a/Neocom.WebUI/src/app/app.component.html
+++ b/Neocom.WebUI/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>
-  {{title}}
-</h1>
+<neocom-header></neocom-header>
+<neocom-navigation-menu></neocom-navigation-menu>
 <router-outlet></router-outlet>
