--- a/Neocom.WebUI/src/app/page/page-home/page-home.component.html
+++ b/Neocom.WebUI/src/app/page/page-home/page-home.component.html
@@ -1,3 +1,5 @@
-<p>
-  page-home works!
-</p>
+<div style="">
+  <a routerLink="/home" class="btn btn-default btn-neocom-box">API Keys</a>
+  <a routerLink="/home" class="btn btn-default btn-neocom-box">Pilot Roaster</a>
+  <a routerLink="/home" class="btn btn-info btn-neocom-box">Maintenance</a>
+</div>
