-Added the PilotRoaster service and starting to code the Pilot model.
Former-commit-id: d47b3153fa8b195b3703a7fc99ee356b3d73d07b

--- a/Neocom.WebUI/src/app/page/page-home/page-home.component.html
+++ b/Neocom.WebUI/src/app/page/page-home/page-home.component.html
@@ -1,5 +1,5 @@
 <div style="">
-  <a routerLink="/home" class="btn btn-default btn-neocom-box">API Keys</a>
-  <a routerLink="/home" class="btn btn-default btn-neocom-box">Pilot Roaster</a>
-  <a routerLink="/home" class="btn btn-info btn-neocom-box">Maintenance</a>
+  <a routerLink="/api-keys" class="btn btn-default btn-neocom-box">API Keys</a>
+  <a routerLink="/pilots" class="btn btn-default btn-neocom-box">Pilot Roaster</a>
+  <a routerLink="/settings" class="btn btn-info btn-neocom-box">Maintenance</a>
 </div>
