-Added the return information form the backend to the pilot list. Now the pilot show some of the information.
Former-commit-id: 8e7cb0db127053cad9779b60dd5a8a39d1b96fe2

--- a/Neocom.WebUI/src/app/page/page-pilots/page-pilots.component.html
+++ b/Neocom.WebUI/src/app/page/page-pilots/page-pilots.component.html
@@ -1,3 +1,18 @@
 <p>
   page-pilots works!
 </p>
+<div>
+  <table width="100%">
+    <tr>
+      <td class="list list-title pr-list-title">Available Pilot List</td>
+    </tr>
+    <tr *ngFor="let pilot of pilotList">
+      <td class="badge badge-blue">{{pilot.urlforAvatar}}</td>
+      <img src="{{pilot.urlforAvatar}}">
+      <td width="90%">
+        <span class="pr-list">{{pilot.name}}</span>
+      </td>
+      <td class="badge">{{pilot.lastKnownLocation}}</td>
+    </tr>
+  </table>
+</div>
