-Added a Pilot block component. -Updated the code to add some output formatting.
Former-commit-id: c584c81c043d8acf48c458e4fd00f35da9a541a2

--- a/Neocom.WebUI/src/app/page/page-pilots/page-pilots.component.html
+++ b/Neocom.WebUI/src/app/page/page-pilots/page-pilots.component.html
@@ -6,13 +6,8 @@
     <tr>
       <td class="list list-title pr-list-title">Available Pilot List</td>
     </tr>
-    <tr *ngFor="let pilot of pilotList">
-      <td class="badge badge-blue">{{pilot.urlforAvatar}}</td>
-      <img src="{{pilot.urlforAvatar}}">
-      <td width="90%">
-        <span class="pr-list">{{pilot.name}}</span>
-      </td>
-      <td class="badge">{{pilot.lastKnownLocation}}</td>
-    </tr>
   </table>
+  <div *ngFor="let pilot of pilotList">
+    <neocom-pilot-roaster-block [pilot]=pilot></neocom-pilot-roaster-block>
+  </div>
 </div>
