-[WIP] Adding the DtaSources as Services because of the injection dependencies found. -[WIP] Using Promises to decouple new from already cached DataSources.
Former-commit-id: c2b44afa785314f7273d64de4ae82563d656412b

--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -3,8 +3,8 @@
 </p>
 <div class="panel-group">
   view-adapter.component running...
-  <div *ngFor="let render of collaborate2View()">
-    <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
+  <div *ngFor="let render of adapterViewList">
+    <app-region *ngIf="render.class == 'Region'" [model]="render" [variant]="render.getVariant()"></app-region>
     <app-location *ngIf="render.class == 'Location'" [model]="render"></app-location>
   </div>
 </div>
