--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -1,10 +1,28 @@
 <p>
   pilot-roaster-page works!
 </p>
+<div class="col-md-2 mediaContainer">
+  Media:
+  <li *ngIf="downloading">
+    <div class="sk-fading-circle">
+      <div class="sk-circle1 sk-circle"></div>
+      <div class="sk-circle2 sk-circle"></div>
+      <div class="sk-circle3 sk-circle"></div>
+      <div class="sk-circle4 sk-circle"></div>
+      <div class="sk-circle5 sk-circle"></div>
+      <div class="sk-circle6 sk-circle"></div>
+      <div class="sk-circle7 sk-circle"></div>
+      <div class="sk-circle8 sk-circle"></div>
+      <div class="sk-circle9 sk-circle"></div>
+      <div class="sk-circle10 sk-circle"></div>
+      <div class="sk-circle11 sk-circle"></div>
+      <div class="sk-circle12 sk-circle"></div>
+    </div>
+  </li>
+</div>
 <div class="panel-group">
   view-adapter.component running...
   <div *ngFor="let render of adapterViewList">
-    <app-region *ngIf="render.class == 'Region'" [model]="render" [variant]="render.getVariant()"></app-region>
-    <app-location *ngIf="render.class == 'Location'" [model]="render"></app-location>
+    <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
   </div>
 </div>
