-Added graphical resources. -[WIP] Added the component render for a Pilot.
Former-commit-id: e9d23c4bffed500e98ac130fd2dca33b8fcc5618

--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -24,5 +24,6 @@
   view-adapter.component running...
   <div *ngFor="let render of adapterViewList">
     <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
+    <neocom-pilot4-roaster *ngIf="render.class == 'Pilot'" [model]="render"></neocom-pilot4-roaster>
   </div>
 </div>
