-Added a new DS for the Pilot Managers. -Added the new Managers component and the new list of elements.
Former-commit-id: c5cc1e9aa82ff7df639f397b6a2755e397f87045

--- a/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.html
@@ -50,3 +50,11 @@
     </table>
   </div>
 </div>
+<div class="panel panel-default panel-skills" id="panel1">
+  <div class="panel-box">
+    <table class="panel-node" cellspacing="0" cellpadding="0">
+      <tr>
+      </tr>
+    </table>
+  </div>
+</div>
