--- a/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.css
+++ b/Neocom.WebUI/src/app/components/pilot4-detail/pilot4-detail.component.css
@@ -1,12 +1,19 @@
-.panel-region {
+.panel-pilot {
+  background-color: #101010;
+  border-color: blue;
   cursor: pointer;
   line-height: 1.0;
   margin-bottom: 5px;
   width: 50%;
 }
 
-.panel-box {
-  padding-right: 5px;
+.panel-skills {
+  background-color: #303030;
+  border-color: yellow;
+  cursor: pointer;
+  line-height: 1.0;
+  margin-bottom: 5px;
+  width: 50%;
 }
 
 .region-name {
@@ -67,15 +74,6 @@
   line-height: 1.3;
 }
 
-.panel-pilot {
-  background-color: #101010;
-  border-color: blue;
-  cursor: pointer;
-  line-height: 1.0;
-  margin-bottom: 5px;
-  width: 50%;
-}
-
 .panel-node {
   margin: 2px;
 }
@@ -85,6 +83,11 @@
   column-gap: 3px;
   margin-left: 5px;
   width: 100%;
+}
+
+.container-2col {
+  column-count: 2;
+  column-gap: 5px;
 }
 
 .neocom-pilot-data {
