-Added the new Managers component and the new list of elements.
Former-commit-id: 7aad64981db86defe35dba1a56c048a9284a9934

--- a/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-detail-page/pilot-detail-page.component.html
@@ -6,6 +6,6 @@
 <div *ngIf="completed" class="panel-group">
   view-adapter.component running...
   <div *ngFor="let render of adapterViewList">
-    <app-region *ngIf="render.class == 'Manager'" [model]="render"></app-region>
+    <neocom-pilot-manager *ngIf="render.class == 'Manager'" [manager]="render"></neocom-pilot-manager>
   </div>
 </div>
