--- a/Neocom.WebUI/src/app/components/pilot-manager/pilot-manager.component.html
+++ b/Neocom.WebUI/src/app/components/pilot-manager/pilot-manager.component.html
@@ -13,7 +13,7 @@
         </td>
         <td class="left-box " align="right ">
           <div class="big-label ">{{manager.iconName}}</div>
-          <div class="stack-counter ">{{assetTotalCount}}</div>
+          <div class="stack-counter ">{{manager.assetTotalCount}}</div>
           <div class="topup-label small-label"><span>ASSETS</span></div>
         </td>
         <td class="arrow-box" (click)="onClickArrow()" [ngClass]="{expanded: expanded}">
