-Added new LoginPage and Login4List component. -Added some new glow styles and some more fonts for testing. -[WIP] Compilation works but list of Login is not shown.
Former-commit-id: 3f3b24177b49760163019ae699e80f8d49e6d627

--- a/Neocom.WebUI/src/app/component/header/header.component.html
+++ b/Neocom.WebUI/src/app/component/header/header.component.html
@@ -1,3 +1,4 @@
-<p>
-  header works!
-</p>
+<div class="header-box">
+  <span class="big-header elemental-ff">NeoCom</span>
+  <span class="version" style="margin-left:10px;">{{getVersion()}}</span>
+</div>
