-Adding more fonts. -Completed the Login Page.
Former-commit-id: ff604871e005472b184287ad340f550a6305444c

--- a/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
+++ b/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
@@ -4,7 +4,7 @@
 <span *ngIf="downloading" class="spinner spinner-large spinner-red spinner-fat spinner-slow spinner-location"></span>
 <div class="panel-group">
   view-adapter.component running...
-  <div *ngFor="let render of adapterViewList">
+  <div *ngFor="let render of loginList">
     <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
     <neocom-pilot4-roaster *ngIf="render.class == 'Pilot'" [model]="render"></neocom-pilot4-roaster>
     <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [node]="render"></neocom-login4-list>
