--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -1,20 +1,17 @@
-<p>
-  login4-list works!
-</p>
 <div class="panel panel-default panel-login" id="panel1">
   <div class="panel-box">
-    <table class="panel-node" cellspacing="0" cellpadding="0">
+    <table class="panel-node" cellspacing="0" cellpadding="0" width="100%">
       <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'/pilotroaster']">
         <tr>
           <td><img class="neocom-icon neocom-icon48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
-          <td width="80% ">
+          <td width="80% " style="padding-left: 3px;">
             <div>
-              <span class="neocom-selectable-name">{{node.getLoginId()}}</span><br>
+              <span class="neocom-selectable-name mons-olympia-ff">{{node.getLoginId()}}</span><br>
             </div>
           </td>
-          <td class="left-box " align="right ">
+          <td width="20%" class="left-box " align="right ">
             <div class="stack-counter ">{{node.getKeyCount()}}</div>
-            <div class="neocom-label label-small label-topupline "></div>
+            <div class="neocom-label label-small label-topupline ">KEYS</div>
           </td>
           <td *ngIf="false" class="arrow-box" (click)="onClickArrow()" [ngClass]="{expanded: expanded}">
             <img class="neocom-arrow" *ngIf="!expanded " src="/assets/icons/arrowleft.png ">
