-Connected the Login with the PilotRoaster using the URL. -Changed the API to include the Login Identifier on the URL on all the calls. -Compiles and runs. Needs review of the glow and fonts and the activation of Managers.
Former-commit-id: 680373f52350acf6496c4531a3c7d89e7ae02c45

--- a/Neocom.WebUI/src/app/component/header/header.component.css
+++ b/Neocom.WebUI/src/app/component/header/header.component.css
@@ -6,10 +6,12 @@
 
 .big-header {
   font-size: 40px;
+  text-shadow: 0px 0px 6px white;
 }
 
 .version {
   font-size: 20px;
-  font-family: "Elemental Italic";
-  color: green;
+  font-family: "Elemental";
+  color: #50B71D;
+  text-shadow: 0px 0px 6px #50B71D;
 }
