--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default panel-login" id="panel1">
   <div class="panel-box">
     <table class="panel-node" cellspacing="0" cellpadding="0" width="100%">
-      <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'/pilotroaster']">
+      <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilotroaster']">
         <tr>
           <td><img class="neocom-icon neocom-icon48" src="/assets/icons/{{node.getPanelIcon()}}"></td>
           <td width="80% " style="padding-left: 3px;">
