--- a/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.css
+++ b/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.css
@@ -1,3 +1,25 @@
+/* C O M P O N E N T    S T Y L E S */
+
+.panel-pilot {
+  background-color: #101010;
+  border-color: blue;
+  cursor: pointer;
+  line-height: 1.0;
+  margin-bottom: 5px;
+  width: 60%;
+  border-radius: 5px;
+  box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  border-color: #A0A0F0;
+}
+
+.neocom-pilot-avatar {
+  height: 90px;
+  width: 90px;
+  border: white 1px solid;
+  box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  margin-right: 3px;
+}
+
 .region-name {
   font-size: 20px;
   font-style: normal;
@@ -5,6 +27,27 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.neocom-icon90 {
+  width: 90px;
+  height: 90px;
+}
+
+.pilot-balance {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+}
+
+.neocom-account-class {
+  color: #0000FF;
+  font-size: 16px;
+  text-shadow: 0px 0px 2px #0000FF;
+  font-weight: 500;
+}
+
+
+/* C O M M O N    S T Y L E S */
 
 .arrow-box {
   vertical-align: middle;
@@ -49,22 +92,6 @@
   width: 90px;
 }
 
-.neocom-selectable-name {
-  color: #50B71D;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1.3;
-}
-
-.panel-pilot {
-  background-color: #101010;
-  border-color: blue;
-  cursor: pointer;
-  line-height: 1.0;
-  margin-bottom: 5px;
-  width: 50%;
-}
-
 .panel-node {
   margin: 2px;
 }
@@ -96,12 +123,6 @@
 
 .neocom-marked-name {
   color: orange;
-}
-
-.neocom-account-class {
-  color: #0000FF;
-  font-size: 16px;
-  font-weight: 900;
 }
 
 .row-separator {
