--- a/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
@@ -1,44 +1,42 @@
-<p>
-  pilot4-roaster works!
-</p>
 <div class="panel panel-default panel-pilot" id="panel1">
   <div class="panel-box">
     <table class="panel-node" cellspacing="0" cellpadding="0">
-      <a [routerLink]="['/pilot',model.getId()]">
+      <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilot',node.getId()]">
         <tr>
-          <td><img class="neocom-icon-90" src="{{model.urlforAvatar}}"></td>
-          <td width="60% ">
+          <td><img class="neocom-pilot-avatar neocom-icon90" src="{{node.urlforAvatar}}"></td>
+          <td width="90% ">
             <div class="panel-content-2col">
-              <span class="neocom-selectable-name">{{model.name}}</span><br>
-              <span class="neocom-pilot-data neocom-data-size-14 neocom-marked-name">{{model.delegatedCharacter.corporationName}}</span><br>
-              <span class="neocom-pilot-data">{{model.characterSheet.gender}}</span> -
-              <span class="neocom-pilot-data">{{model.characterSheet.race | lowercase | capitalizeLetter}}</span>              -
-              <span class="neocom-pilot-data">{{model.characterSheet.bloodLine | lowercase | capitalizeLetter}}</span>              -
-              <span class="neocom-pilot-data">{{model.characterSheet.ancestry | lowercase | capitalizeLetter}}</span><br>
-              <span class="neocom-pilot-data neocom-data-size-12">Balance:</span>
-              <span class="pilot-balance">{{model.accountBalance | number:'1.2-2'}} ISK</span><br>
-              <span class="neocom-pilot-data neocom-data-size-12">Active Ship:</span>
-              <span class="neocom-marked-name">{{model.characterInfo.shipName}}</span>
-              <span class="neocom-pilot-data"> - [{{model.characterInfo.shipTypeName}}]</span><br>
-              <span class="neocom-pilot-data neocom-data-size-12">Located in:</span>
-              <span class="neocom-pilot-data neocom-data-size-14 neocom-marked-name">{{model.characterInfo.lastKnownLocation}}</span><br>
-              <span class="neocom-pilot-data neocom-data-size-12">Secutiry Status:</span>
-              <span class="neocom-pilot-data neocom-data-size-14">{{model.characterInfo.securityStatus | number:'1.2-2'}}</span>
+              <span class="neocom-selectable-name">{{node.name}}</span><br>
+
+              <!-- <span class="neocom-pilot-data neocom-data-size-14 neocom-marked-name">{{node.delegatedCharacter.corporationName}}</span><br>
+              <span class="neocom-pilot-data">{{node.characterSheet.gender}}</span> -
+              <span class="neocom-pilot-data">{{node.characterSheet.race | lowercase | capitalizeLetter}}</span>              -
+              <span class="neocom-pilot-data">{{node.characterSheet.bloodLine | lowercase | capitalizeLetter}}</span>              -
+              <span class="neocom-pilot-data">{{node.characterSheet.ancestry | lowercase | capitalizeLetter}}</span><br> -->
+              <span class="pilot-balance glow-white label-bottomline">{{node.accountBalance | number:'1.2-2'}} ISK</span><br>
+              <span class="neocom-label">Balance</span><br>
+              <!-- <span class="neocom-pilot-data neocom-data-size-12">Active Ship:</span>
+              <span class="neocom-marked-name">{{node.characterInfo.shipName}}</span> -->
+              <!-- <span class="neocom-pilot-data"> - [{{node.characterInfo.shipTypeName}}]</span><br> -->
+              <span class="neocom-marked-name neocom-marked-glow label-bottomline" style="font-weight: 400;">{{node.characterInfo.lastKnownLocation}}</span><br>
+              <span class="neocom-label">Located At</span><br>
+              <!-- <span class="neocom-pilot-data neocom-data-size-12">Securiry Status:</span>
+              <span class="neocom-pilot-data neocom-data-size-14">{{node.characterInfo.securityStatus | number:'1.2-2'}}</span> -->
+              <span class="neocom-marked-name neocom-marked-glow label-bottomline">{{node.characterInfo.skillPoints | number:'1.0-0'}} SP</span><br>
+              <span class="neocom-label">Total SP</span>
             </div>
           </td>
-          <td class="left-box " align="right ">
+          <td width="30% " class="left-box " align="right ">
             <div class="neocom-account-class">{{getCharacterClass()}}</div>
             <div>
-              <span class="neocom-pilot-data neocom-data-size-12">Total SP:</span>
-              <span class="neocom-pilot-data neocom-data-size-14 neocom-marked-name">{{model.characterInfo.skillPoints | number:'1.0-0'}}</span>
             </div>
             <div>
-              <span class="neocom-pilot-data neocom-data-size-12">Account status:</span><br>
-              <span class="neocom-pilot-data neocom-data-size-14">{{model.characterSheet.cloneName}}</span><br>
-              <span class="neocom-pilot-data neocom-data-size-12" style="color:red">Expired</span><br>
+              <!-- <span class="neocom-pilot-data neocom-data-size-12">Account status:</span><br> -->
+              <span class="neocom-marked-name">{{node.characterSheet.cloneName}}</span><br>
+              <span class="neocom-label neocom-ts16 glow-red" style="color:red">Expired</span><br>
             </div>
           </td>
-          <td class="arrow-box" (click)="onClickArrow()" [ngClass]="{expanded: model.expanded}">
+          <td class="arrow-box" (click)="onClickArrow()" [ngClass]="{expanded: node.expanded}">
             <img class="neocom-arrow" *ngIf="!expanded " src="/assets/icons/arrowleft.png ">
             <img class="neocom-arrow" *ngIf="expanded " src="/assets/icons/arrowright.png ">
           </td>
