--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -1,30 +1,7 @@
-<p>
-  pilot-roaster-page works!
-</p>
 <span *ngIf="downloading" class="spinner spinner-large spinner-red spinner-fat spinner-slow spinner-location"></span>
-<!-- <div class="col-md-2 mediaContainer">
-  Media:
-  <li *ngIf="downloading">
-    <div class="sk-fading-circle">
-      <div class="sk-circle1 sk-circle"></div>
-      <div class="sk-circle2 sk-circle"></div>
-      <div class="sk-circle3 sk-circle"></div>
-      <div class="sk-circle4 sk-circle"></div>
-      <div class="sk-circle5 sk-circle"></div>
-      <div class="sk-circle6 sk-circle"></div>
-      <div class="sk-circle7 sk-circle"></div>
-      <div class="sk-circle8 sk-circle"></div>
-      <div class="sk-circle9 sk-circle"></div>
-      <div class="sk-circle10 sk-circle"></div>
-      <div class="sk-circle11 sk-circle"></div>
-      <div class="sk-circle12 sk-circle"></div>
-    </div>
-  </li>
-</div> -->
 <div class="panel-group">
-  view-adapter.component running...
   <div *ngFor="let render of adapterViewList">
-    <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
-    <neocom-pilot4-roaster *ngIf="render.class == 'Pilot'" [model]="render"></neocom-pilot4-roaster>
+    <app-region *ngIf="render.class == 'Region'" [node]="render"></app-region>
+    <neocom-pilot4-roaster *ngIf="render.jsonClass == 'Pilot'" [node]="render"></neocom-pilot4-roaster>
   </div>
 </div>
