-Removed some obsolete components. -Changed the processing of data and keeping it centralized into the AppModelStore and its data hierarchy objects. -Adding functionality to the Model objects to control its data persistency.
Former-commit-id: 233567298fd757634744b6a2e614dadd98278bc3

--- a/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default panel-pilot" id="panel1">
   <div class="panel-box">
     <table class="panel-node" cellspacing="0" cellpadding="0">
-      <a class="no-underline" [routerLink]="['/login',node.getLoginId(),'pilot',node.getId()]">
+      <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',node.getId()]">
         <tr>
           <td><img class="neocom-pilot-avatar neocom-icon90" src="{{node.urlforAvatar}}"></td>
           <td width="90% ">
