--- a/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
+++ b/Neocom.WebUI/src/app/pages/login-page/login-page.component.html
@@ -4,9 +4,9 @@
 <span *ngIf="downloading" class="spinner spinner-large spinner-red spinner-fat spinner-slow spinner-location"></span>
 <div class="panel-group">
   view-adapter.component running...
-  <div *ngFor="let render of loginList">
-    <app-region *ngIf="render.class == 'Region'" [model]="render"></app-region>
-    <neocom-pilot4-roaster *ngIf="render.class == 'Pilot'" [model]="render"></neocom-pilot4-roaster>
+  <div *ngFor="let render of loginViewList">
+    <app-region *ngIf="render.class == 'Region'" [node]="render"></app-region>
+    <neocom-pilot4-roaster *ngIf="render.class == 'Pilot'" [node]="render"></neocom-pilot4-roaster>
     <neocom-login4-list *ngIf="render.jsonClass == 'Login'" [node]="render"></neocom-login4-list>
   </div>
 </div>
