-[WIP] Adding more fonts. -[WIP] Replacng spinner. -Changed the render for the main panes to a look similar to the one presented by Eve Online.
Former-commit-id: 97312dc5de166e70531b431ad073b16fab4c7836

--- a/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
+++ b/Neocom.WebUI/src/app/components/login4-list/login4-list.component.html
@@ -10,7 +10,8 @@
             </div>
           </td>
           <td width="20%" class="left-box " align="right ">
-            <div class="stack-counter ">{{node.getKeyCount()}}</div>
+            <span *ngIf="node.downloadPending" class="spinner"></span>
+            <div *ngIf="!node.downloadPending" class="stack-counter ">{{node.getKeyCount()}}</div>
             <div class="neocom-label label-small label-topupline ">KEYS</div>
           </td>
           <td *ngIf="false" class="arrow-box" (click)="onClickArrow()" [ngClass]="{expanded: expanded}">
