--- a/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.css
+++ b/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.css
@@ -1,6 +1,6 @@
 /* C O M P O N E N T    S T Y L E S */
 
-.panel-pilot {
+.panel-pilot2 {
   background-color: #101010;
   border-color: blue;
   cursor: pointer;
@@ -18,6 +18,7 @@
   border: white 1px solid;
   box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
   margin-right: 3px;
+  margin-left: 3px;
 }
 
 .region-name {
@@ -44,6 +45,73 @@
   font-size: 16px;
   text-shadow: 0px 0px 2px #0000FF;
   font-weight: 500;
+}
+
+
+/* C O R N E T   B O R D E R */
+
+
+/*background-color: #050505; // Dark black*/
+
+
+/*background-color: #080505; // Dark red*/
+
+#content {
+  background-color: #080808; // Light black
+  /*border-color: blue;*/
+  font-family: "Mons Olympia";
+  cursor: pointer;
+  line-height: 1.0;
+  margin-bottom: 5px;
+  width: 60%;
+  /*border-radius: 5px;*/
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+  /*border: 1px #A0A0F0 solid;*/
+  position: relative;
+  height: auto;
+  opacity: 0.8;
+}
+
+#content:hover {
+  opacity: 1.0
+}
+
+#content:before, #content:after, #content>:first-child:before, #content>:first-child:after {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 2px orange solid;
+  filter: blur(1px);
+  /* or whatever colour */
+  /*border-style: solid;*/
+  /* or whatever style */
+  content: ' ';
+}
+
+#content:before {
+  top: 0;
+  left: 0;
+  border-width: 2px 0 0 2px;
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+}
+
+#content:after {
+  top: 0;
+  right: 0;
+  border-width: 2px 2px 0 0;
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+}
+
+#content>:first-child:before {
+  bottom: 0;
+  right: 0;
+  border-width: 0 2px 2px 0
+}
+
+#content>:first-child:after {
+  bottom: 0;
+  left: 0;
+  border-width: 0 0 2px 2px
 }
 
 
@@ -130,8 +198,4 @@
   border-top-style: solid;
   margin-bottom: 3px;
   border-top-color: white
-}
-
-.neocom-arrow {
-  transform: rotate(90deg);
 }
