--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.css
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.css
@@ -1,33 +1,26 @@
 /* S P I N N E R */
 
-.spinner {
-  /* Spinner size and color */
-  width: 1.5rem;
-  height: 1.5rem;
-  border-top-color: #444;
-  border-left-color: #444;
-  /* Additional spinner styles */
-  animation: spinner 400ms linear infinite;
-  border-bottom-color: transparent;
-  border-right-color: transparent;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-
-/* Animation styles */
-
 @keyframes spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
+  to {
     transform: rotate(360deg);
   }
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top-color: #07d;
+  border-bottom-color: #07d;
+  animation: spinner .8s ease infinite;
 }
 
 .spinner-location {
