--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -1,4 +1,6 @@
-<span *ngIf="downloading2" class="spinner spinner-location"></span>
+<div width="60%" height="30px">
+  <span class="spinner spinner-location"></span>
+</div>
 <div class="panel-group">
   <div *ngFor="let render of adapterViewList">
     <app-region *ngIf="render.jsonClass == 'Region'" [node]="render"></app-region>
