-[WIP] Added the new Region and the code to access the testing Planetary Manager.
Former-commit-id: 8fac7d8dd7475066882165c7e5c5fc23dc81a548

--- a/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
+++ b/Neocom.WebUI/src/app/components/pilot4-roaster/pilot4-roaster.component.html
@@ -1,4 +1,4 @@
-<div class="panel1 panel-default1 panel-pilot" id="content">
+<div class="panel-pilot" id="content">
   <div class="panel-box">
     <table class="panel-node" cellspacing="0" cellpadding="0">
       <a class="no-underline" [routerLink]="['/login',getLoginId(),'pilot',node.getId()]">
