--- a/Neocom.WebUI/src/app/components/region/region.component.html
+++ b/Neocom.WebUI/src/app/components/region/region.component.html
@@ -2,7 +2,7 @@
   region works!
 </p>
 <div class="neocom-panel" id="content">
-  <div class="panel-collapsed" (click)="toggleExpanded()" [ngClass]="{panel-expanded: node.expanded}">
+  <div class="panel-collapsed" (click)="toggleExpanded()" [ngClass]="{expanded: node.expanded}">
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
       <tr>
         <td>
