-Changed the spinner by one of my own construction.
Former-commit-id: afc16f014eb74ac328e39f6d0799606dc97b4c78

--- a/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
+++ b/Neocom.WebUI/src/app/pages/pilot-roaster-page/pilot-roaster-page.component.html
@@ -1,5 +1,6 @@
-<div width="60%" height="30px">
-  <span class="spinner spinner-location"></span>
+<div *ngIf="downloading" width="60%" height="30px">
+  <div class="spinner-in spinner-size60"></div>
+  <div class="spinner-out spinner-size70"></div>
 </div>
 <div class="panel-group">
   <div *ngFor="let render of adapterViewList">
