--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -190,64 +190,75 @@ body {
 
 /* S P I N N E R    D E F I N I T I O N */
 
-.spinner2 {
-  /* Spinner size and color */
-  width: 1.5rem;
-  height: 1.5rem;
-  border-top-color: #444;
-  border-left-color: #444;
-  /* Additional spinner styles */
-  animation: spinner 400ms linear infinite;
-  border-bottom-color: transparent;
-  border-right-color: transparent;
-  border-style: solid;
-  border-width: 2px;
-  border-radius: 50%;
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-}
 
+/* S P I N N E R */
 
-/* Animation styles */
-
-@keyframes spinner2 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
+@keyframes spinner-in {
+  to {
     transform: rotate(360deg);
   }
 }
 
-
-/* Optional — create your own variations! */
-
-.spinner-large {
-  width: 5rem;
-  height: 5rem;
-  border-width: 6px;
+@keyframes spinner-out {
+  to {
+    transform: rotate(-360deg);
+  }
 }
 
-.spinner-slow {
-  animation: spinner 1s linear infinite;
+.spinner-in:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  margin-left: -20px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  border-top-color: #07d;
+  border-bottom-color: #07d;
+  animation: spinner-in .8s ease infinite;
+}
+
+.spinner-out:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -25px;
+  margin-left: -25px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  border-top-color: #A00000;
+  border-bottom-color: #A00000;
+  animation: spinner-out 1.2s ease infinite;
+}
+
+.spinner-size60 {
+  width: 100px;
+  height: 100px;
+  margin-top: -40px;
+  margin-left: -40px;
+}
+
+.spinner-size70 {
+  width: 100px;
+  height: 100px;
+  margin-top: -15px;
+  margin-left: -15px;
 }
 
 .spinner-blue {
-  border-top-color: #09d;
-  border-left-color: #09d;
+  border-top-color: #0000A0;
+  border-bottom-color: #0000A0;
 }
 
 .spinner-red {
   border-top-color: #FF0000;
-  border-left-color: #FFA0A0;
-}
-
-.spinner-fat {
-  border-width: 6px;
-  /*border-radius: 40%;*/
-}
-
-.spinner-location {
-  margin_left: 40%;
+  border-bottom-color: #FF0000;
 }
