-Updated the stypes to be used and common. -Updated some API method names and functions to make environments more compatible. -Added code to get the Location icon reference. -Added view refresh back firing code. -[BUG] Location refresh when regions < 4 removes any change from the model. -Added new Asset component. -[BUG] Corrected the proper way to use the recursive Collaborate2View.
Former-commit-id: c0e3f1de55989c15503b7ee1262abbefa61f0016

--- a/Neocom.WebUI/src/app/components/asset/asset.component.html
+++ b/Neocom.WebUI/src/app/components/asset/asset.component.html
@@ -3,15 +3,16 @@
     <table class="neocom-panel-container" cellspacing="0" cellpadding="0">
       <tr>
         <td>
-          <img class="neocom-icon iconsize-48" src="{{node.urlLocationIcon}}" height="48px " width="48px ">
+          <img class="neocom-icon iconsize-48" src="http://image.eveonline.com/Type/{{node.typeID}}_64.png" height="48px "
+            width="48px ">
         </td>
         <td class="neocom-panel-column" width="80%">
           <span class="neocom-selectable-name">{{node.name}}</span>
         </td>
         <td width="20%" class="neocom-panel-right-box" align="right ">
-          <div class="neocom-classname">REGION</div>
+          <!-- <div class="neocom-classname">REGION</div>
           <div class="stack-counter lined-bottomline">5</div>
-          <div class="neocom-label label-small">STATIONS</div>
+          <div class="neocom-label label-small">STATIONS</div> -->
         </td>
         <td width="10%" class="neocom-arrow-box">
           <img class="neocom-arrow" *ngIf="!node.expanded " src="/assets/icons/arrowleft.png ">
