--- a/Neocom.WebUI/src/app/pages/planetary-manager-page/planetary-manager-page.component.html
+++ b/Neocom.WebUI/src/app/pages/planetary-manager-page/planetary-manager-page.component.html
@@ -10,8 +10,8 @@
 </div>
 <div class="panel-group">
   <div *ngFor="let render of adapterViewList">
-    <neocom-region *ngIf="render.jsonClass == 'Region'" [node]="render"></neocom-region>
-    <neocom-location *ngIf="render.jsonClass == 'Location'" [node]="render"></neocom-location>
-    <!-- <neocom-resource *ngIf="render.jsonClass == 'Resource'" [node]="render"></neocom-resource> -->
+    <neocom-region *ngIf="render.jsonClass == 'Region'" [viewer]="getViewer()" [node]="render"></neocom-region>
+    <neocom-location *ngIf="render.jsonClass == 'Location'" [viewer]="getViewer()" [node]="render"></neocom-location>
+    <neocom-asset *ngIf="render.jsonClass == 'Asset'" [viewer]="getViewer()" [node]="render"></neocom-asset>
   </div>
 </div>
