--- a/Neocom.WebUI/src/styles.css
+++ b/Neocom.WebUI/src/styles.css
@@ -98,16 +98,18 @@ body {
 
 /* C O M M O N    S T Y L E S */
 
-.neocom-arrow {
-  transform: rotate(90deg);
-  filter: blur(1px);
-}
-
 .neocom-selectable-name {
   color: #50B71D;
   font-size: 18px;
   line-height: 1.3;
   text-shadow: 0px 0px 2px #50B71D;
+  font-weight: 500;
+}
+
+.neocom-account-class {
+  color: #0000FF;
+  font-size: 16px;
+  text-shadow: 0px 0px 2px #0000FF;
   font-weight: 500;
 }
 
@@ -140,7 +142,6 @@ body {
 }
 
 .neocom-label {
-  /*font-family: "Roboto";*/
   font-family: "Imaki";
   font-weight: normal;
   font-size: small;
@@ -153,12 +154,8 @@ body {
   font-size: 10px;
 }
 
-.label-topupline {
-  border-top: white 1px solid;
-}
-
-.label-bottomline {
-  border-bottom: white 1px solid;
+.label-large {
+  font-size: 16px;
 }
 
 .no-underline {
@@ -179,13 +176,134 @@ body {
   font-size: 14px;
 }
 
+.stack-counter {
+  font-size: 24px;
+  font-weight: 600;
+  padding-bottom: 3px;
+  padding-top: 3px;
+}
+
+.lined-topupline {
+  border-top: white 1px solid;
+}
+
+.lined-bottomline {
+  border-bottom: white 1px solid;
+}
+
+
+/* A R R O W   S E C T I O N */
+
+.neocom-arrow-box {
+  vertical-align: middle;
+}
+
+.neocom-arrow {
+  transform: rotate(90deg);
+  filter: blur(1px);
+}
+
 
 /* P A N E L S */
 
+.neocom-panel {
+  font-family: "Mons Olympia";
+}
 
-/*.panel-box {
+.neocom-panel-container {
+  margin: 5px;
+}
+
+.neocom-panel-column {
+  padding-left: 5px;
+}
+
+.neocom-panel-right-box {
+  padding-left: 5px;
   padding-right: 5px;
-}*/
+}
+
+#content {
+  background-color: #080808; // Light black
+  /*border-color: blue;*/
+  cursor: pointer;
+  line-height: 1.0;
+  margin-bottom: 5px;
+  width: 60%;
+  /*border-radius: 5px;*/
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+  /*border: 1px #A0A0F0 solid;*/
+  position: relative;
+  height: auto;
+  opacity: 0.8;
+}
+
+#content:hover {
+  opacity: 1.0
+}
+
+#content:before, #content:after, #content>:first-child:before, #content>:first-child:after {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 2px orange solid;
+  filter: blur(1px);
+  /* or whatever colour */
+  /*border-style: solid;*/
+  /* or whatever style */
+  content: ' ';
+}
+
+#content:before {
+  top: 0;
+  left: 0;
+  border-width: 2px 0 0 2px;
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+}
+
+#content:after {
+  top: 0;
+  right: 0;
+  border-width: 2px 2px 0 0;
+  /*box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);*/
+}
+
+#content>:first-child:before {
+  bottom: 0;
+  right: 0;
+  border-width: 0 2px 2px 0
+}
+
+#content>:first-child:after {
+  bottom: 0;
+  left: 0;
+  border-width: 0 0 2px 2px
+}
+
+
+/* I C O N S */
+
+.neocom-icon {
+  border: white 1px solid;
+  box-shadow: inset 0px 0px 4px 1px rgba(255, 255, 255, 0.73), 0px 0px 4px 1px rgba(255, 255, 255, 0.73);
+  margin: 5px;
+  /*margin-left: 5px;*/
+}
+
+.iconsize-48 {
+  height: 48px;
+  width: 48px;
+}
+
+.iconsize-60 {
+  height: 60px;
+  width: 60px;
+}
+
+.iconsize-90 {
+  height: 90px;
+  width: 90px;
+}
 
 
 /* S P I N N E R    D E F I N I T I O N */
